--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	</script>
 
 	<style>
-      @font-face { font-family: Pacifico; src: url('Pacifico.TTF'); }
+      @font-face { font-family: Pacifico; src: url('Pacifico.ttf'); }
       h2 {
          font-family: Pacifico
       }
